--- a/views/partials/_footerJs.ejs
+++ b/views/partials/_footerJs.ejs
@@ -1,6 +1,6 @@
   <!-- Bootstrap core JavaScript -->
-  <script src="public/vendor/jquery/jquery.min.js"></script>
-  <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/vendor/jquery/jquery.min.js"></script>
+  <script src="/public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="public/js/clean-blog.min.js"></script>
+  <script src="/public/js/clean-blog.min.js"></script>
