--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
 <%- include("partials/_navbar.ejs") %>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('public/img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('/img/about-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
