--- a/views/postAdd.ejs
+++ b/views/postAdd.ejs
@@ -7,7 +7,7 @@
 
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('public/img/contact-bg.jpg')">
+  <header class="masthead" style="background-image: url('/img/contact-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <form method="post" action="/posts" >
+        <form method="post" action="/post/save" >
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Post Title</label>
